# python-background-remover

./: .gitignore  package-lock.json  package.json  pyproject.toml
app/: main.py
