[tool.poetry]
name = "background-remover"
version = "0.1.0"
description = ""
authors = ["Azurebird <white.camilo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mediapipe = "^0.8.9"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
